@@ -116,6 +116,7 @@ project(':curator-x-discovery-server')
     {
         compile project(':curator-x-discovery')
         compile 'javax.ws.rs:jsr311-api:1.1.1'
+        compile 'com.google.inject:guice:3.0'   // only for TypeLiteral - in the future will be replaced by Guava 13
         testCompile project(':curator-test')
         testCompile 'junit:junit-dep:4.10'
         testCompile 'com.sun.jersey:jersey-server:1.11'
